# 2024-neurodowo-workshop

./: 2024-neurodowo-workshop.code-workspace  pyproject.toml
notebooks/: 2-network-basics.ipynb
src/2024_neurodowo_workshop/: __init__.py
