[project]
name = "2024-neurodowo-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "navis[cloudvolume,fastcore,flybrains,hash,kdtree,shapely]>=1.7.0",
    "ipython>=8.26.0",
    "numpy<2.0",
    "fafbseg>=3.0.10",
    "neuprint-python>=0.4.26",
    "python-dotenv>=1.0.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "humanize>=4.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
    "pip>=24.2",
]
